namespace AsmdefDependencyPattern
{
    public struct Common
    {
        public int value;
    }
}
